@@ -1,14 +1,12 @@
 package dev.langchain4j.model.googleai;
 
+import static dev.langchain4j.data.message.AiMessage.GENERATED_IMAGES_KEY;
 import static dev.langchain4j.internal.Utils.getOrDefault;
 import static dev.langchain4j.internal.Utils.isNotNullOrEmpty;
 import static dev.langchain4j.internal.Utils.isNullOrBlank;
 import static dev.langchain4j.internal.Utils.isNullOrEmpty;
 import static dev.langchain4j.internal.Utils.readBytes;
 import static dev.langchain4j.model.googleai.FunctionMapper.toToolExecutionRequests;
-import static dev.langchain4j.model.googleai.GeminiMediaResolutionLevel.MEDIA_RESOLUTION_HIGH;
-import static dev.langchain4j.model.googleai.GeminiMediaResolutionLevel.MEDIA_RESOLUTION_LOW;
-import static dev.langchain4j.model.googleai.GeminiMediaResolutionLevel.MEDIA_RESOLUTION_UNSPECIFIED;
 import static dev.langchain4j.model.googleai.Json.fromJson;
 import static java.util.stream.Collectors.joining;
 
@@ -19,7 +17,6 @@ import dev.langchain4j.data.message.AudioContent;
 import dev.langchain4j.data.message.ChatMessage;
 import dev.langchain4j.data.message.Content;
 import dev.langchain4j.data.message.ImageContent;
-import dev.langchain4j.data.message.ImageContent.DetailLevel;
 import dev.langchain4j.data.message.PdfFileContent;
 import dev.langchain4j.data.message.SystemMessage;
 import dev.langchain4j.data.message.TextContent;
@@ -36,23 +33,23 @@ import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiExecutableC
 import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiFileData;
 import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiFunctionCall;
 import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiFunctionResponse;
-import dev.langchain4j.model.googleai.GeminiContent.GeminiPart.GeminiMediaResolution;
 import java.net.URI;
 import java.util.ArrayList;
 import java.util.Base64;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 final class PartsAndContentsMapper {
+
     private PartsAndContentsMapper() {}
 
     static final String THINKING_SIGNATURE_KEY =
             "thinking_signature"; // do not change, will break backward compatibility!
-    static final String GENERATED_IMAGES_KEY =
-            "generated_images"; // key for storing generated images in AiMessage attributes
 
     private static final CustomMimeTypesFileTypeDetector mimeTypeDetector = new CustomMimeTypesFileTypeDetector();
 
@@ -60,11 +57,16 @@ final class PartsAndContentsMapper {
     private static final Pattern DATA_URI_PATTERN = Pattern.compile("^data:([^;,]+)(?:;[^,]*)?,(.*)$");
 
     static GeminiContent.GeminiPart fromContentToGPart(Content content) {
+        return fromContentToGPart(content, false);
+    }
+
+    static GeminiContent.GeminiPart fromContentToGPart(Content content, boolean mediaResolutionPerPartEnabled) {
         if (content instanceof TextContent textContent) {
             return GeminiContent.GeminiPart.builder().text(textContent.text()).build();
         } else if (content instanceof ImageContent imageContent) {
             Image image = imageContent.image();
-            GeminiMediaResolution mediaResolution = toGeminiMediaResolution(imageContent.detailLevel());
+            GeminiMediaResolution mediaResolution =
+                    mediaResolutionPerPartEnabled ? toGeminiMediaResolution(imageContent.detailLevel()) : null;
 
             if (!isNullOrBlank(image.base64Data())) {
                 return GeminiContent.GeminiPart.builder()
@@ -158,6 +160,25 @@ final class PartsAndContentsMapper {
         } else {
             throw new UnsupportedFeatureException("Unsupported content type: " + content.type());
         }
+    }
+
+    /**
+     * Maps DetailLevel from ImageContent to GeminiMediaResolution.
+     *
+     * @param detailLevel the detail level from ImageContent
+     * @return the corresponding GeminiMediaResolution, or null if detailLevel is null
+     */
+    private static GeminiMediaResolution toGeminiMediaResolution(ImageContent.DetailLevel detailLevel) {
+        if (detailLevel == null) {
+            return null;
+        }
+        return switch (detailLevel) {
+            case LOW -> GeminiMediaResolution.of(GeminiMediaResolutionLevel.MEDIA_RESOLUTION_LOW);
+            case MEDIUM -> GeminiMediaResolution.of(GeminiMediaResolutionLevel.MEDIA_RESOLUTION_MEDIUM);
+            case HIGH -> GeminiMediaResolution.of(GeminiMediaResolutionLevel.MEDIA_RESOLUTION_HIGH);
+            case ULTRA_HIGH -> GeminiMediaResolution.of(GeminiMediaResolutionLevel.MEDIA_RESOLUTION_ULTRA_HIGH);
+            case AUTO -> GeminiMediaResolution.of(GeminiMediaResolutionLevel.MEDIA_RESOLUTION_UNSPECIFIED);
+        };
     }
 
     static AiMessage fromGPartsToAiMessage(
@@ -265,6 +286,14 @@ final class PartsAndContentsMapper {
 
     static List<GeminiContent> fromMessageToGContent(
             List<ChatMessage> messages, GeminiContent systemInstruction, boolean sendThinking) {
+        return fromMessageToGContent(messages, systemInstruction, sendThinking, false);
+    }
+
+    static List<GeminiContent> fromMessageToGContent(
+            List<ChatMessage> messages,
+            GeminiContent systemInstruction,
+            boolean sendThinking,
+            boolean mediaResolutionPerPartEnabled) {
         return messages.stream()
                 .map(msg -> {
                     switch (msg.type()) {
@@ -320,11 +349,35 @@ final class PartsAndContentsMapper {
 
                             return new GeminiContent(
                                     userMessage.contents().stream()
-                                            .map(PartsAndContentsMapper::fromContentToGPart)
-                                            .toList(),
+                                            .map(content -> fromContentToGPart(content, mediaResolutionPerPartEnabled))
+                                            .collect(Collectors.toList()),
                                     GeminiRole.USER.toString());
                         case TOOL_EXECUTION_RESULT:
                             ToolExecutionResultMessage toolResultMessage = (ToolExecutionResultMessage) msg;
+
+                            if (!toolResultMessage.hasSingleText()) {
+                                List<GeminiContent.GeminiPart> toolParts = new ArrayList<>();
+                                Map<String, String> responseMap = new HashMap<>();
+                                for (dev.langchain4j.data.message.Content content : toolResultMessage.contents()) {
+                                    if (content instanceof TextContent textContent) {
+                                        responseMap.put("response", textContent.text());
+                                    } else if (content instanceof ImageContent imageContent) {
+                                        toolParts.add(fromContentToGPart(imageContent, mediaResolutionPerPartEnabled));
+                                    } else {
+                                        throw new UnsupportedFeatureException(
+                                                "Google AI Gemini does not support content type '"
+                                                        + content.type() + "' in tool results.");
+                                    }
+                                }
+                                if (responseMap.isEmpty()) {
+                                    responseMap.put("response", "");
+                                }
+                                toolParts.add(0, GeminiContent.GeminiPart.builder()
+                                        .functionResponse(new GeminiFunctionResponse(
+                                                toolResultMessage.toolName(), responseMap))
+                                        .build());
+                                return new GeminiContent(toolParts, GeminiRole.USER.toString());
+                            }
 
                             return new GeminiContent(
                                     List.of(GeminiContent.GeminiPart.builder()
@@ -338,7 +391,7 @@ final class PartsAndContentsMapper {
                     }
                 })
                 .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     /**
@@ -375,24 +428,5 @@ final class PartsAndContentsMapper {
             geminiParts.add(geminiPart);
         }
         return geminiParts;
-    }
-
-    /**
-     * Converts ImageContent.DetailLevel to GeminiMediaResolution for per-part media resolution.
-     *
-     * @param imageDetailLevel the detail level from ImageContent
-     * @return GeminiMediaResolution with the corresponding resolution level, or null if imageDetailLevel is null
-     */
-    private static GeminiMediaResolution toGeminiMediaResolution(DetailLevel imageDetailLevel) {
-        if (imageDetailLevel == null) {
-            return null;
-        }
-        var resolutionLevel =
-                switch (imageDetailLevel) {
-                    case LOW -> MEDIA_RESOLUTION_LOW;
-                    case HIGH -> MEDIA_RESOLUTION_HIGH;
-                    case AUTO -> MEDIA_RESOLUTION_UNSPECIFIED;
-                };
-        return new GeminiMediaResolution(resolutionLevel);
     }
 }
